[package]
name = "erpc"
version = "0.1.0"
authors = ["wuhao2016 <whaohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erpc-sys = { path = "../erpc-sys", version = "0.1.0" }

[dev-dependencies]
libc = "0.2"