[package]
name = "multi_paxos"
version = "0.1.0"
authors = ["wuhao2016 <whaohit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common"}
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.6"
tonic = "0.4.3"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
async-stream = "0.3"